changed the overflow-y property of html to hidden to fix issues on smaller browsers. It works at first, but it has issues when the window resizes.

--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 /*Stylings for the header and menu*/
 
 * {margin: 0; box-sizing: border-box;}
+
 html {
 	background-color: #e2e2e2;
-	)
+	overflow-x: hidden;
 }
 
 #wrapper {
@@ -67,6 +68,7 @@ nav ul {
 }
 
 @media all and (max-width: 40em) {
+	
 	header {
 		display: flex;
 		flex-flow: row nowrap;
